fix(@bautajs/example, @bautajs/cache-decorator): add trace logs, add cache example (#160)
