# packages/bautajs-example/api-definition.json
@@ -10,7 +10,7 @@
     },
     "servers": [
       {
-        "url": "/v1/api/"
+        "url": "/api/v1"
       }
     ],
     "paths": {
@@ -174,6 +174,27 @@
         "get": {
           "summary": "List all fact cats",
           "operationId": "cats",
+          "responses": {
+            "200": {
+              "description": "Something!"
+            },
+            "default": {
+              "description": "unexpected error",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/Error"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "/chuckfacts/{string}": {
+        "get": {
+          "summary": "get a list of facts related to Chuck Norris",
+          "operationId": "chuckFacts",
           "responses": {
             "200": {
               "description": "Something!"
